tests/ui/coherence/indirect-impl-blanket-downstream-trait.stderr
error[E0271]: type mismatch resolving `<dyn Downstream as Trait>::Assoc == usize`
  --> $DIR/indirect-impl-blanket-downstream-trait.rs:37:21
   |
LL |     impl_downstream(x);
   |     --------------- ^ type mismatch resolving `<dyn Downstream as Trait>::Assoc == usize`
   |     |
   |     required by a bound introduced by this call
   |
note: expected this to be `usize`
  --> $DIR/indirect-impl-blanket-downstream-trait.rs:9:18
   |
LL |     type Assoc = &'static str;
   |                  ^^^^^^^^^^^^
note: required by a bound in `impl_downstream`
  --> $DIR/indirect-impl-blanket-downstream-trait.rs:28:32
   |
LL | fn impl_downstream<T: ?Sized + Downstream>(x: &T) {}
   |                                ^^^^^^^^^^ required by this bound in `impl_downstream`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
